changing version of gradle to find problem with exit code 1

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,17 +2,23 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()  // Дополнительно для плагинов
     }
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+    }
 }
